integration_tests/k8s_task_runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: k8s-task-runner
  name: k8s-task-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-task-runner
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: k8s-task-runner
    spec:
      serviceAccountName: k8s-task-runner-sa
      containers:
      - image: k3d-k8s-task-runner.registry.localhost:5000/k8s_task_runner:0.5
        name: k8s-task-runner
        resources: {}
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /status
            port: 80
          failureThreshold: 6
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /status
            port: 80
          failureThreshold: 3
          periodSeconds: 3
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: k8s-task-runner
  name: k8s-task-runner-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: k8s-task-runner
status:
  loadBalancer: {}
