integration_tests/k3d_ingress.yaml
---
# This is to route requests from localhost into k3d cluster network
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-task-runner-svc
            port:
              number: 80
